Added navbar and background image

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <nav>
-        <div class="logo"><img src="images/greenhouseLogo.jpg" alt="greenhouseLogo"></div>
+        <div class="logo">Monty Tech Greenhouse</div>
         <div class="pages">
             <a href="">Plants</a>
             <a href="">Statues</a>
             <a href="">Contact us</a>
         </div>
     </nav>
+    <div class="heroSection">
+        
+    </div>
 </body>
 </html>
