--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <nav>
         <div class="logo">Monty Tech Greenhouse</div>
         <div class="pages">
-            <a href="">Plants</a>
+            <a href="/plants.html">Plants</a>
             <a href="">Statues</a>
             <a href="">Contact us</a>
         </div>
     </nav>
     <div class="heroSection">
-        
+        <div class="info">
+            <h1>A place of Greenery</h1>
+            <p>Come to the Monty Tech's greenhouse, where we have lots of beautiful plants and masonry stautes. </p>
+            <button>Shop Now</button>
+        </div>
     </div>
 </body>
 </html>
