Added plant names, images, and more fluid grid layout

--- a/plants.html
+++ b/plants.html
@@ -24,37 +24,37 @@
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
-                <p class="plantName">Capella Coral Pentuia</p>
+                <p class="plantName">Yellow Calibrocha</p>
+                <p class="plantInfo">A cool yellow flower</p>
+            </div>
+            <div class="plant">
+                <div class="plantImg"></div>
+                <p class="plantName">Neon Pink Calibrocha</p>
+                <p class="plantInfo">A cool pink flower</p>
+            </div>
+            <div class="plant">
+                <div class="plantImg"></div>
+                <p class="plantName">White Calibrocha</p>
                 <p class="plantInfo">A cool red flower</p>
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
-                <p class="plantName">Capella Coral Pentuia</p>
+                <p class="plantName">Coleus</p>
                 <p class="plantInfo">A cool red flower</p>
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
-                <p class="plantName">Capella Coral Pentuia</p>
+                <p class="plantName">Cuphea</p>
                 <p class="plantInfo">A cool red flower</p>
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
-                <p class="plantName">Capella Coral Pentuia</p>
+                <p class="plantName">Amore</p>
                 <p class="plantInfo">A cool red flower</p>
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
-                <p class="plantName">Capella Coral Pentuia</p>
-                <p class="plantInfo">A cool red flower</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Capella Coral Pentuia</p>
-                <p class="plantInfo">A cool red flower</p>
-            </div>
-            <div class="plant">
-                <div class="plantImg"></div>
-                <p class="plantName">Capella Coral Pentuia</p>
+                <p class="plantName">Fuchisa</p>
                 <p class="plantInfo">A cool red flower</p>
             </div>
         </div>
