--- a/plants.html
+++ b/plants.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo">Monty Tech Greenhouse</div>
+        <div class="logo"><img src="/images/greenhouse.png" alt="greenhouseLogo"/><a href="/index.html">Monty Tech Greenhouse</a></div>
         <div class="pages">
             <a href="">Plants</a>
             <a href="">Statues</a>
