--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="logo"><img src="/images/greenhouse.png" alt="greenhouseLogo"/><a href="/index.html">Monty Tech Greenhouse</a></div>
         <div class="pages">
             <a href="/plants.html">Plants</a>
-            <a href="">Statues</a>
+            <a href="/masonry.html">Statues</a>
             <a href="">Contact us</a>
         </div>
     </nav>
