Added footer section

--- a/plants.html
+++ b/plants.html
@@ -61,5 +61,26 @@
         
 </div>
     </div>
+    <footer>
+        <ul>
+            <li>Monty Tech Greenhouse</li>
+            <li>Montachusett Regional Vocational Technical School</li>
+            <li>1050 Westinister Street</li>
+            <li>Fitchburg, MA 01420</li>
+        </ul>
+        <ul>
+            <li>Contacts</li>
+            <li>Instagram</li>
+            <li>Tiktok</li>
+        </ul>
+        <ul>
+            <li>Plants</li>
+            <li>Masonry</li>
+            <li>Fruits and Vegetales</li>
+        </ul>
+        <div class="MTLogo">
+            <img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo">
+        </div>
+    </footer>
 </body>
 </html>
