masonry css stuff

--- a/masonry.html
+++ b/masonry.html
@@ -14,7 +14,11 @@
             <a href="">Contact us</a>
         </div>
     </nav>
+    <h1>Masonry Structures</h1>
     <div class="masonryProduct">
+        <div class="masonryImageContainer">
+            <img src="images\Fuchsia-Blue-Eyes-Web-4.jpg" class="masonryImage">
+        </div>
         sigma
     </div>
     <div class="masonryProduct">
