Created contact us page

--- a/masonry.html
+++ b/masonry.html
@@ -11,9 +11,9 @@
     <nav>
         <div class="logo"><img src="/images/greenhouse.png" alt="greenhouseLogo"/><a href="/index.html">Monty Tech Greenhouse</a></div>
         <div class="pages">
-            <a href="">Plants</a>
-            <a href="">Statues</a>
-            <a href="">Contact us</a>
+            <a href="/plants.html">Plants</a>
+            <a href="/masonry.html">Statues</a>
+            <a href="/contact.html">Contact us</a>
         </div>
     </nav>
     <h1>Masonry Structures</h1>
