--- a/plants.html
+++ b/plants.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/shopplants.css">
         <link rel="stylesheet" href="/nav.css">
         <link rel="stylesheet" href="/footer.css">
-        <title>Document</title>
+        <title>Shop Plants</title>
     </head>
 <body>
     <nav>
@@ -14,7 +14,7 @@
         <div class="pages">
             <a href="">Plants</a>
             <a href="">Statues</a>
-            <a href="">Contact us</a>
+            <a href="/contact.html">Contact us</a>
         </div>
     </nav>
         <div class="plantGrid">
