--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="pages">
             <a href="/plants.html">Plants</a>
             <a href="/masonry.html">Statues</a>
-            <a href="">Contact us</a>
+            <a href="/contact.html">Contact us</a>
         </div>
     </nav>
     <div class="heroSection">
