--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/nav.css">
+    <link rel="stylesheet" href="/footer.css">
+    <link rel="stylesheet" href="/contact.css">
+    <title>Contact Us</title>
 </head>
 <body>
-    
+    <nav>
+        <a href="/index.html"><div class="logo"><img src="/images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
+        <div class="pages">
+            <a href="/plants.html">Plants</a>
+            <a href="/masonry.html">Statues</a>
+            <a href="/contact.html">Contact us</a>
+        </div>
+    </nav>
+    <main>
+        <div class="contactInfo">
+            <h1>Connect With Us</h1>
+        </div>
+        <img src="" alt="">
+    </main>
+    <footer>
+        <ul>
+            <li>Monty Tech Greenhouse</li>
+            <li>Montachusett Regional Vocational Technical School</li>
+            <li>1050 Westinister Street</li>
+            <li>Fitchburg, MA 01420</li>
+        </ul>
+        <ul>
+            <li>Contacts</li>
+            <li>Instagram</li>
+            <li>Tiktok</li>
+        </ul>
+        <ul>
+            <li>Plants</li>
+            <li>Masonry</li>
+            <li>Fruits and Vegetales</li>
+        </ul>
+        <div class="MTLogo">
+            <img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo">
+        </div>
+    </footer>
 </body>
 </html>
