added content and style to contact page

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,25 @@
     <main>
         <div class="contactInfo">
             <h1>Connect With Us</h1>
+            <div class="contactList">
+                <div class="contact">
+                    <h3>Email us</h3>
+                    <p>carlson-dayana@montytech.net</p>
+                </div>
+                <div class="contact">
+                    <h3>Call Us</h3>
+                    <p>978-345-9200
+                    </p>
+                </div>
+                <div class="contact">
+                    <h3>Find us on:</h3>
+                    <ul>
+                        
+                    </ul>
+                </div>
+            </div>
         </div>
-        <img src="" alt="">
+        <div class="image"></div>
     </main>
     <footer>
         <ul>
