more masonry stuff

--- a/masonry.html
+++ b/masonry.html
@@ -26,8 +26,20 @@
         </div>
     </div>
     <div class="masonryProduct">
-        i love masonry wow
+        <div class="masonryImageContainer">
+            <img src="images\Fuchsia-Blue-Eyes-Web-4.jpg" class="masonryImage">
+        </div>
+        <div class="text">
+            oooooooooooooooooooooooooooooooooooooooooooooh
+        </div>
     </div>
-    
 
+    <div class="masonryProduct">
+        <div class="masonryImageContainer">
+            <img src="images\Fuchsia-Blue-Eyes-Web-4.jpg" class="masonryImage">
+        </div>
+        <div class="text">
+            oooooooooooooooooooooooooooooooooooooooooooooh
+        </div>
+    </div>
 </body>
