Switched plant images with the ones from the greenhouse

--- a/plants.html
+++ b/plants.html
@@ -25,7 +25,7 @@
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
-                <p class="plantName">Yellow Calibrocha</p>
+                <p class="plantName">Yellow and Purple Calibrocha</p>
                 <p class="plantInfo">A cool yellow flower</p>
             </div>
             <div class="plant">
@@ -57,6 +57,11 @@
                 <div class="plantImg"></div>
                 <p class="plantName">Fuchisa</p>
                 <p class="plantInfo">A cool red flower</p>
+            </div>
+            <div class="plant starlight">
+                <div class="plantImg"></div>
+                <p class="plantName">Starlight Starbright</p>
+                <p class="plantInfo">Like a night sky</p>
             </div>
         </div>  
         <div class="extraPlantInfo">
