fix footer and added The Gnome

--- a/masonry.html
+++ b/masonry.html
@@ -19,10 +19,10 @@
     <h1>Masonry Structures</h1>
     <div class="masonryProduct">
         <div class="masonryImageContainer">
-            <img src="images\Fuchsia-Blue-Eyes-Web-4.jpg" class="masonryImage">
+            <img src="images\masonry\gnome.webp" class="masonryImage">
         </div>
         <div class="text">
-            oooooooooooooooooooooooooooooooooooooooooooooh
+            Gnome
         </div>
     </div>
     <div class="masonryProduct">
@@ -42,4 +42,25 @@
             oooooooooooooooooooooooooooooooooooooooooooooh
         </div>
     </div>
+    <footer>
+        <ul>
+            <li>Monty Tech Greenhouse</li>
+            <li>Montachusett Regional Vocational Technical School</li>
+            <li>1050 Westinister Street</li>
+            <li>Fitchburg, MA 01420</li>
+        </ul>
+        <ul>
+            <li>Contacts</li>
+            <li>Instagram</li>
+            <li>Tiktok</li>
+        </ul>
+        <ul>
+            <li>Plants</li>
+            <li>Masonry</li>
+            <li>Fruits and Vegetales</li>
+        </ul>
+        <div class="MTLogo">
+            <img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo">
+        </div>
+    </footer>
 </body>
