--- a/plants.html
+++ b/plants.html
@@ -24,7 +24,7 @@
                 <p class="plantInfo">A cool red flower</p>
             </div>
             <div class="plant">
-                <div class="plantImg"></div>
+                <div class="plantImg"><img src="" alt=""></div>
                 <p class="plantName">Yellow and Purple Calibrocha</p>
                 <p class="plantInfo">A cool yellow flower</p>
             </div>
