--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/nav.css">
-    <link rel="stylesheet" href="/footer.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="footer.css">
     <title>MT Greenhouse</title>
 </head>
 <body>
     <nav>
-        <a href="/index.html"><div class="logo"><img src="/images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
+        <a href="index.html"><div class="logo"><img src="/images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
         <div class="pages">
-            <a href="/plants.html">Plants</a>
-            <a href="/masonry.html">Statues</a>
-            <a href="/contact.html">Contact us</a>
+            <a href="plants.html">Plants</a>
+            <a href="masonry.html">Statues</a>
+            <a href="contact.html">Contact us</a>
         </div>
     </nav>
     <div class="heroSection">
@@ -31,7 +31,7 @@
             <li>1050 Westinister Street</li>
             <li>Fitchburg, MA 01420</li>
         </ul>
-        <ul>l
+        <ul>
             <li>Contacts</li>
             <li>Instagram</li>
             <li>Tiktok</li>
