responsive masonry page

--- a/masonry.html
+++ b/masonry.html
@@ -17,31 +17,59 @@
         </div>
     </nav>
     <h1>Masonry Structures</h1>
+    <div class="masonryProducts">
+    <div class="masonryProduct">
+        <div class="masonryImageContainer">
+            <img src="images\masonry\bench.webp" class="masonryImage">
+        </div>
+        <div class="text">
+            <p><b>Bench</b><br>$50.00</p>
+        </div>
+    </div>
+    <div class="masonryProduct">
+        <div class="masonryImageContainer">
+            <img src="images\masonry\lighthouse.webp" class="masonryImage">
+        </div>
+        <div class="text">
+            <p><b>Lighthouse</b><br>$25.00</p>
+        </div>
+    </div>
     <div class="masonryProduct">
         <div class="masonryImageContainer">
             <img src="images\masonry\gnome.webp" class="masonryImage">
         </div>
         <div class="text">
-            Gnome
+            <p><b>Gnome Statue</b><br>$5.00</p>
         </div>
     </div>
     <div class="masonryProduct">
         <div class="masonryImageContainer">
-            <img src="images\Fuchsia-Blue-Eyes-Web-4.jpg" class="masonryImage">
+            <img src="images\masonry\cat.webp" class="masonryImage">
         </div>
         <div class="text">
-            oooooooooooooooooooooooooooooooooooooooooooooh
+            <p><b>Cat Statue</b><br>$5.00</p>
         </div>
     </div>
 
     <div class="masonryProduct">
         <div class="masonryImageContainer">
-            <img src="images\Fuchsia-Blue-Eyes-Web-4.jpg" class="masonryImage">
+            <img src="images\masonry\duck.webp" class="masonryImage">
         </div>
         <div class="text">
-            oooooooooooooooooooooooooooooooooooooooooooooh
+            <p><b>Duck Statue</b><br>$5.00</p>
         </div>
     </div>
+
+    <div class="masonryProduct">
+        <div class="masonryImageContainer">
+            <img src="images\masonry\pig.webp" class="masonryImage">
+        </div>
+        <div class="text">
+            <p><b>Pig Statue</b><br>$5.00</p>
+        </div>
+    </div>
+</div>
+
     <footer>
         <ul>
             <li>Monty Tech Greenhouse</li>
@@ -57,7 +85,7 @@
         <ul>
             <li>Plants</li>
             <li>Masonry</li>
-            <li>Fruits and Vegetales</li>
+            <li>Fruits and Vegetables</li>
         </ul>
         <div class="MTLogo">
             <img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo">
