--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
             <a href="masonry.html">Statues</a>
             <a href="contact.html">Contact us</a>
         </div>
+        <img src="https://cdn-icons-png.flaticon.com/128/2516/2516745.png" alt="menu icon" class="menuIcon">
     </nav>
+    <div class="mobileNav">
+        <a href="plants.html">Plants</a>
+        <a href="masonry.html">Statues</a>
+        <a href="contact.html">Contact us</a>
+    </div>
     <div class="heroSection">
         <div class="info">
             <h1>A place of Greenery</h1>
@@ -45,5 +51,6 @@
             <img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo">
         </div>
     </footer>
+    <script src="nav.js"></script>
 </body>
 </html>
