Added mobile nav to each webpage and created nav js file

--- a/masonry.html
+++ b/masonry.html
@@ -9,13 +9,19 @@
 </head>
 <body>
     <nav>
-        <div class="logo"><img src="/images/greenhouse.png" alt="greenhouseLogo"/><a href="/index.html">Monty Tech Greenhouse</a></div>
+        <a href="index.html"><div class="logo"><img src="/images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
         <div class="pages">
-            <a href="/plants.html">Plants</a>
-            <a href="/masonry.html">Statues</a>
-            <a href="/contact.html">Contact us</a>
+            <a href="plants.html">Plants</a>
+            <a href="masonry.html">Statues</a>
+            <a href="contact.html">Contact us</a>
         </div>
+        <img src="https://cdn-icons-png.flaticon.com/128/2516/2516745.png" alt="menu icon" class="menuIcon">
     </nav>
+    <div class="mobileNav">
+        <a href="plants.html">Plants</a>
+        <a href="masonry.html">Statues</a>
+        <a href="contact.html">Contact us</a>
+    </div>
     <h1>Masonry Structures</h1>
     <div class="masonryProducts">
     <div class="masonryProduct">
@@ -91,4 +97,5 @@
             <img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo">
         </div>
     </footer>
+    <script src="nav.js"></script>
 </body>
