--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,19 @@
 </head>
 <body>
     <nav>
-        <a href="/index.html"><div class="logo"><img src="/images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
+        <a href="index.html"><div class="logo"><img src="/images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
         <div class="pages">
-            <a href="/plants.html">Plants</a>
-            <a href="/masonry.html">Statues</a>
-            <a href="/contact.html">Contact us</a>
+            <a href="plants.html">Plants</a>
+            <a href="masonry.html">Statues</a>
+            <a href="contact.html">Contact us</a>
         </div>
+        <img src="https://cdn-icons-png.flaticon.com/128/2516/2516745.png" alt="menu icon" class="menuIcon">
     </nav>
+    <div class="mobileNav">
+        <a href="plants.html">Plants</a>
+        <a href="masonry.html">Statues</a>
+        <a href="contact.html">Contact us</a>
+    </div>
     <main>
         <div class="contactInfo">
             <h1>Connect With Us</h1>
@@ -61,5 +67,6 @@
             <img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo">
         </div>
     </footer>
+    <script src="nav.js"></script>
 </body>
 </html>
