--- a/contact.html
+++ b/contact.html
@@ -19,18 +19,18 @@
     </nav>
     <main>
         <div class="contactInfo">
-            <h1>Connect With Us</h1>
+            <h1 style="color:rgb(0, 0, 0);">Connect With Us</h1>
             <div class="contactList">
                 <div class="contact">
-                    <h3>Email Us</h3>
-                    <a href="carlson-dayana@montytech.net">carlson-dayana@montytech.net</a>
+                    <h3 style="color:rgb(0, 0, 0);">Email Us</h3>
+                    <a href="carlson-dayana@montytech.net" style="color:rgb(0, 0, 0);">carlson-dayana@montytech.net</a>
                 </div>
                 <div class="contact">
-                    <h3>Call Us</h3>
-                    <a href="tel+:9783459200">978-345-9200</a>
+                    <h3 style="color:rgb(0, 0, 0);">Call Us</h3>
+                    <a href="tel+:9783459200" style="color:rgb(0, 0, 0);">978-345-9200</a>
                 </div>
                 <div class="contact">
-                    <h3>Find us on:</h3>
+                    <h3 style="color:rgb(0, 0, 0);">Find us on:</h3>
                     <div class="socialMediaList">
                         <a href="https://www.instagram.com/montytechbulldogs/?hl=en"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="instagram icon"></a>
                         <a href="https://www.facebook.com/MontyTechBulldogs/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/2021_Facebook_icon.svg/2048px-2021_Facebook_icon.svg.png" alt="facebook icon"></a>
