Changed home page background

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="info">
             <h1>A place of Greenery</h1>
             <p>Come to the Monty Tech's greenhouse, where we have lots of beautiful plants and masonry stautes. </p>
-            <button>Shop Now</button>
+            <a href="plants.html"><button>Shop Now</button></a>
         </div>
     </div>
     <footer>
