--- a/plants.html
+++ b/plants.html
@@ -74,6 +74,11 @@
                 <p class="plantName">Bambooo</p>
                 <p class="plantInfo">Can grow over 1,000ft</p>
             </div>
+            <div class="plant">
+                <div class="plantImg"></div>
+                <p class="plantName">Blackberry and Cream Sufina</p>
+                <p class="plantInfo">Bright yellow with a cool color inside</p>
+            </div>
         </div>  
         <div class="extraPlantInfo">
             <div class="plantPortrait"></div>
