--- a/plants.html
+++ b/plants.html
@@ -79,6 +79,21 @@
                 <p class="plantName">Blackberry and Cream Sufina</p>
                 <p class="plantInfo">Bright yellow with a cool color inside</p>
             </div>
+            <div class="plant">
+                <div class="plantImg"></div>
+                <p class="plantName">Bright Red Guranium</p>
+                <p class="plantInfo">Brimming and bold</p>
+            </div>
+            <div class="plant">
+                <div class="plantImg"></div>
+                <p class="plantName">Yellow Petunia</p>
+                <p class="plantInfo">(Have not bloomed yet)</p>
+            </div>
+            <div class="plant">
+                <div class="plantImg"></div>
+                <p class="plantName">White Guranium</p>
+                <p class="plantInfo">Like a baby white Calibrocha</p>
+            </div>
         </div>  
         <div class="extraPlantInfo">
             <div class="plantPortrait"></div>
