--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><div class="logo"><img src="/images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
+        <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
         <div class="pages">
             <a href="plants.html">Plants</a>
             <a href="masonry.html">Statues</a>
