Changed descriptions and fixed grammar issues in plants page

--- a/plants.html
+++ b/plants.html
@@ -27,42 +27,42 @@
             <div class="plant">
                 <div class="plantImg"></div>
                 <p class="plantName">Capella Coral Pentuia</p>
-                <p class="plantInfo">A cool red flower</p>
+                <p class="plantInfo">Great flower to put in a hanging basket</p>
             </div>
             <div class="plant">
                 <div class="plantImg"><img src="" alt=""></div>
                 <p class="plantName">Yellow and Purple Calibrocha</p>
-                <p class="plantInfo">A cool yellow flower</p>
+                <p class="plantInfo">Represent Monty Tech with nature</p>
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
                 <p class="plantName">Neon Pink Calibrocha</p>
-                <p class="plantInfo">A cool pink flower</p>
+                <p class="plantInfo">Can bloom from early spring to late summer</p>
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
                 <p class="plantName">White Calibrocha</p>
-                <p class="plantInfo">A cool red flower</p>
+                <p class="plantInfo">A simple and clean white flower</p>
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
                 <p class="plantName">Coleus</p>
-                <p class="plantInfo">A cool red flower</p>
+                <p class="plantInfo">A herb during a spring, but turns into a flower in the late summer</p>
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
                 <p class="plantName">Cuphea</p>
-                <p class="plantInfo">A cool red flower</p>
+                <p class="plantInfo">Also known as "hummingbirds lunch"</p>
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
                 <p class="plantName">Amore</p>
-                <p class="plantInfo">A cool red flower</p>
+                <p class="plantInfo">Purple and yellow combined to make a pretty pattern</p>
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
                 <p class="plantName">Fuchisa</p>
-                <p class="plantInfo">A cool red flower</p>
+                <p class="plantInfo">Red as the bud grows, but when it blooms it shows its purple petals</p>
             </div>
             <div class="plant">
                 <div class="plantImg"></div>
