--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
         </ul>
         <ul>
             <li>Contacts</li>
-            <li>Instagram</li>
-            <li>Tiktok</li>
+            <li><a href="https://www.facebook.com/MontyTechBulldogs/">Facebook</a></li>
+            <li<a href="https://www.instagram.com/montytechbulldogs/?hl=en">Instagram</a></li>
         </ul>
         <ul>
             <li>Plants</li>
