Fixed footer links

--- a/plants.html
+++ b/plants.html
@@ -112,15 +112,15 @@
             <ul>
                 <li>Contacts</li>
                 <li><a href="https://www.facebook.com/MontyTechBulldogs/">Facebook</a></li>
-                <li<a href="https://www.instagram.com/montytechbulldogs/?hl=en">Instagram</a></li>
+                <li><a href="https://www.instagram.com/montytechbulldogs/?hl=en">Instagram</a></li>
             </ul>
             <ul>
-                <li>Plants</li>
-                <li>Masonry</li>
-                <li>Fruits and Vegetales</li>
+                <li>Shop</li>
+                <li><a href="/plants.html">Plants</a></li>
+                <li><a href="/masonry.html">Masonry</a></li>
             </ul>
             <div class="MTLogo">
-                <img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo">
+                <a href="https://www.montytech.net/"><img src="https://www.montytech.net/cms/lib/MA02212741/Centricity/Domain/4196/Athletic%20Bulldog-06.png" alt="monty tech logo"></a>
             </div>
         </footer>
         <script src="nav.js"></script>
