--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
+        <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"><p>Monty Tech Greenhouse</p></div></a>
         <div class="pages">
             <a href="plants.html">Plants</a>
             <a href="masonry.html">Statues</a>
@@ -26,9 +26,9 @@
     </div>
     <div class="heroSection">
         <div class="info">
-            <h1>A place of Greenery</h1>
-            <p>Come to the Monty Tech's greenhouse, where we have lots of beautiful plants and masonry stautes. </p>
-            <a href="plants.html"><button>Shop Now</button></a>
+            <h1>A Place of Greenery</h1>
+            <p>Come to the Monty Tech's greenhouse, where we have lots of beautiful plants and masonry statues. </p>
+           <button onclick="window.location.href = '/plants.html'">Shop Now</button>
         </div>
     </div>
     <footer>
