--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="info">
             <h1>A Place of Greenery</h1>
             <p>Come to the Monty Tech's greenhouse, where we have lots of beautiful plants and masonry statues. </p>
-           <button onclick="window.location.href = '/plants.html'">Shop Now</button>
+           <button onclick="window.location.href = 'plants.html'">Shop Now</button>
         </div>
     </div>
     <footer>
