--- a/masonry.html
+++ b/masonry.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="footer.css">
     <title>Masonry</title>
 </head>
+<html lang="en">
 <body>
     <nav>
         <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
@@ -26,7 +27,7 @@
     <div class="masonryProducts">
     <div class="masonryProduct">
         <div class="masonryImageContainer">
-            <img src="images\masonry\bench.webp" class="masonryImage">
+            <img src="images/masonry/bench.webp" alt="bench statue" class="masonryImage">
         </div>
         <div class="text">
             <p><b>Bench</b><br>$50.00</p>
@@ -34,7 +35,7 @@
     </div>
     <div class="masonryProduct">
         <div class="masonryImageContainer">
-            <img src="images\masonry\lighthouse.webp" class="masonryImage">
+            <img src="images/masonry/lighthouse.webp" alt="lighthouse statue" class="masonryImage">
         </div>
         <div class="text">
             <p><b>Lighthouse</b><br>$25.00</p>
@@ -42,7 +43,7 @@
     </div>
     <div class="masonryProduct">
         <div class="masonryImageContainer">
-            <img src="images\masonry\gnome.webp" class="masonryImage">
+            <img src="images/masonry/gnome.webp" alt="gnome statue" class="masonryImage">
         </div>
         <div class="text">
             <p><b>Gnome Statue</b><br>$5.00</p>
@@ -50,7 +51,7 @@
     </div>
     <div class="masonryProduct">
         <div class="masonryImageContainer">
-            <img src="images\masonry\cat.webp" class="masonryImage">
+            <img src="images/masonry/cat.webp" alt="cat statue" class="masonryImage">
         </div>
         <div class="text">
             <p><b>Cat Statue</b><br>$5.00</p>
@@ -59,7 +60,7 @@
 
     <div class="masonryProduct">
         <div class="masonryImageContainer">
-            <img src="images\masonry\duck.webp" class="masonryImage">
+            <img src="images/masonry/duck.webp" alt="duck statue" class="masonryImage">
         </div>
         <div class="text">
             <p><b>Duck Statue</b><br>$5.00</p>
@@ -68,7 +69,7 @@
 
     <div class="masonryProduct">
         <div class="masonryImageContainer">
-            <img src="images\masonry\pig.webp" class="masonryImage">
+            <img src="images/masonry/pig.webp" alt="pig statue" class="masonryImage">
         </div>
         <div class="text">
             <p><b>Pig Statue</b><br>$5.00</p>
@@ -99,3 +100,4 @@
     </footer>
     <script src="nav.js"></script>
 </body>
+</html>
