--- a/plants.html
+++ b/plants.html
@@ -10,7 +10,7 @@
     </head>
 <body>
     <nav>
-        <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
+        <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"><p>Monty Tech Greenhouse</p></div></a>
         <div class="pages">
             <a href="plants.html">Plants</a>
             <a href="masonry.html">Statues</a>
@@ -30,7 +30,7 @@
                 <p class="plantInfo">Great flower to put in a hanging basket</p>
             </div>
             <div class="plant">
-                <div class="plantImg"><img src="" alt=""></div>
+                <div class="plantImg"></div>
                 <p class="plantName">Yellow and Purple Calibrocha</p>
                 <p class="plantInfo">Represent Monty Tech with nature</p>
             </div>
