The validation errors aren't ending...

--- a/masonry.html
+++ b/masonry.html
@@ -10,7 +10,7 @@
     </head>
 <body>
     <nav>
-        <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"/><p>Monty Tech Greenhouse</p></div></a>
+        <a href="index.html"><div class="logo"><img src="images/greenhouse.png" alt="greenhouseLogo"><p>Monty Tech Greenhouse</p></div></a>
         <div class="pages">
             <a href="plants.html">Plants</a>
             <a href="masonry.html">Statues</a>
@@ -87,7 +87,7 @@
         <ul>
             <li>Contacts</li>
             <li><a href="https://www.facebook.com/MontyTechBulldogs/">Facebook</a></li>
-            <li<a href="https://www.instagram.com/montytechbulldogs/?hl=en">Instagram</a></li>
+            <li><a href="https://www.instagram.com/montytechbulldogs/?hl=en">Instagram</a></li>
         </ul>
         <ul>
             <li>Plants</li>
